--- a/views/default.hbs
+++ b/views/default.hbs
@@ -8,8 +8,8 @@
     <title>{{title}}</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/solid.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./public/css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="../public/css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     {{{block "head"}}}
 </head>
 
@@ -47,10 +47,12 @@
 
     </header>
     {{{body}}}
-    <script src="./public/js/jquery/jquery.js"></script>
-    <script src="./public/js/popper.js/umd/popper.js"></script>
-    <script src="./public/js/bootstrap/bootstrap.js"></script>
-    <script src="./public/js/js.js"></script>
+    <script src="../public/js/jquery/jquery.js"></script>
+    <script src="../public/js/popper.js/umd/popper.js"></script>
+    <script src="../public/js/bootstrap/bootstrap.js"></script>
+    <script src="../public/js/socket.io/socket.io.js"></script>
+    <script src="../public/js/socket.io.js"></script>
+    <script src="../public/js/js.js"></script>
     {{{block 'script'}}}
 </body>
 
