--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,29 @@
     color: #214040;
 }
 
+/* width */
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+    background: #214040;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 nav>ul {
     padding: 0.3em;
     width: 100%;
@@ -61,4 +84,40 @@ li.active>a {
 
 ul {
     height: 100%;
+}
+.projects{
+    direction:rtl;
+    overflow:auto;
+    position: fixed;
+    width:4em;
+    height:100vh;
+    background:#214040;
+}
+.project{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    color:#63BFBF;
+    background:grey;
+    border: 2px solid #214040 !important;
+    border-radius: 100%;
+    height:3em;
+    width:3em;
+    margin:0.5em;
+    transition: all 200ms ease-in-out;
+}
+.project:hover{
+    border:2px solid #85FFFE !important;
+    cursor:pointer;
+}
+.currentProject{
+    border:2px solid #85FFFE !important;
+}
+.triangle{
+    position: fixed;
+    width:7em;
+    height:2em;
+    transform:rotateZ(-45deg);
+    background:#214040;
+    z-index: -1111;
 }
