made some stuff, uploaded via bat

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,9 +8,9 @@
         A
     </button>
     {{/each}}
-    <button class="project" id="#addProject" type="button" class="btn btn-secondary" data-toggle="tooltip"
+    <button class="" id="addProject" type="button" class="btn btn-secondary" data-toggle="tooltip"
         data-placement="right" title="{{this.name}}">
-        A
+        <i class="fas fa-plus-circle fa-2x"></i>
     </button>
 
 </div>
