--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,28 @@ ul {
     margin:0.5em;
     transition: all 200ms ease-in-out;
 }
+#addProject{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background:grey;
+    border: 2px solid #214040 !important;
+    border-radius: 100%;
+    height:3em;
+    width:3em;
+    margin:0.5em;
+
+    float:bottom;
+}
+#addProject i{
+    transition: all 200ms ease-in-out;
+    border-radius: 100%;
+}
+#addProject:hover i{
+    background: #85FFFE !important;
+    cursor:pointer;
+
+}
 .project:hover{
     border:2px solid #85FFFE !important;
     cursor:pointer;
