made some stuff, uploaded via bat

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,8 +8,8 @@
         A
     </button>
     {{/each}}
-    <button class="project" id="#addProject" type="button" class="btn btn-secondary" data-toggle="tooltip"
-        data-placement="right" title="{{this.name}}">
+    <button class="project" id="#addProject" type="button" class="btn btn-secondary" data-toggle="modal tooltip"
+        data-target="#myModal" data-placement="right" title="{{this.name}}">
         A
     </button>
 
