--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -8,8 +8,8 @@
 <div class="triangle"></div>
 <div class="projects">
     {{#each allProjects}}
-    <button class="project" id="{{this.id}}" type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right"
-        title="{{this.name}}">
+    <button class="project" id="{{this.id}}" type="button" class="btn btn-secondary" data-toggle="tooltip"
+        data-placement="right" title="{{this.name}}">
         A
     </button>
     {{/each}}
@@ -91,9 +91,50 @@
                 </div>
             </div>
         </div>
-        <div id="log" class="border"></div>
+        <div id="log" class="border">
+            <span>[00.00.00] Something to log</span>
+        </div>
     </div>
 </main>
+{{!-- Add modal --}}
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <form class="addNew">
+                <div class="form-group">
+                    <label for="name">Task Name</label>
+                    <input type="input" class="form-control" id="name" placeholder="Enter a task name">
+                </div>
+                <div class="form-group">
+                    <label for="priority">Priority</label>
+                    <select class="form-control" id="priority">
+                        <option>High</option>
+                        <option>None</option>
+                        <option>Low</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="status">Priority</label>
+                    <select class="form-control" id="status">
+                        <option>TODO</option>
+                        <option>In Progress</option>
+                        <option>To Verify</option>
+                        <option>Done</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="time">Time</label>
+                    <input type="datetime-local" name="time" id="time">
+                </div>
+                <div class="form-group">
+                    <label for="description">Task Description</label>
+                    <textarea class="form-control" id="description" rows="3"></textarea>
+                </div>
+                <div class="from-group"><button class="btn btn-primary" id="submit">Add Task</button></div>
+            </form>
+        </div>
+    </div>
+</div>
 <footer>
     <div class="bar"></div>
 </footer>
