--- a/views/default.hbs
+++ b/views/default.hbs
@@ -69,35 +69,14 @@
             <div class="modal-content">
                 <form class="addNew">
                     <div class="form-group">
-                        <label for="name">Task Name</label>
-                        <input type="input" class="form-control" id="name" placeholder="Enter a task name">
+                        <label for="name">Project Name</label>
+                        <input type="input" class="form-control" id="name" placeholder="Enter a project name">
                     </div>
                     <div class="form-group">
-                        <label for="priority">Priority</label>
-                        <select class="form-control" id="priority">
-                            <option>High</option>
-                            <option>None</option>
-                            <option>Low</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="status">Priority</label>
-                        <select class="form-control" id="status">
-                            <option>TODO</option>
-                            <option>In Progress</option>
-                            <option>To Verify</option>
-                            <option>Done</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="time">Time</label>
-                        <input type="datetime-local" name="time" id="time">
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Task Description</label>
+                        <label for="description">Project Description</label>
                         <textarea class="form-control" id="description" rows="3"></textarea>
                     </div>
-                    <div class="from-group"><button class="btn btn-primary" id="submit">Add Task</button></div>
+                    <div class="from-group"><button class="btn btn-primary" id="submit">Add Project</button></div>
                 </form>
             </div>
         </div>
