made some stuff, uploaded via bat

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -85,11 +85,11 @@
         </div>
         <div id="log" class="border">
             {{#each logs}}
-               {{{this.html}}}
+            {{{this.html}}}
             {{/each}}
         </div>
     </div>
 </main>
 <footer>
-    <div class="bar"></div>
+    <div class="bar"><span class="barItem" id="online">Online: 3</span></div>
 </footer>
