--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="../public/css/dashboard.css">
 {{/contentFor}}
 {{#contentFor 'script'}}
-<script src="../public/js/dashboardDesign.js"></script>
+<script src="../public/js/dashboardDesign.js" defer></script>
 {{/contentFor}}
 <main>
     <div class="tasks">
