--- a/views/default.hbs
+++ b/views/default.hbs
@@ -49,17 +49,10 @@
     {{#if loggedIn}}
     <div class="triangle"></div>
     <div class="projects">
-        {{#each allProjects}}
-        <button class="project" id="{{this.id}}" type="button" class="btn btn-secondary" data-toggle="tooltip"
-            data-placement="right" title="{{this.name}}">
-            {{trimString this.name}}
-        </button>
-        {{/each}}
-        <button class="" id="addProject" type="button" class="btn btn-secondary" data-toggle="modal"
+        <button class="addProject" id="addProject" type="button" class="btn btn-secondary" data-toggle="modal"
             data-target="#myModal">
             <i class="fas fa-plus-circle fa-2x"></i>
         </button>
-
     </div>
     {{/if}}
     {{{body}}}
@@ -81,12 +74,12 @@
             </div>
         </div>
     </div>
-    <script src="../public/js/jquery/jquery.js"></script>
-    <script src="../public/js/popper.js/umd/popper.js"></script>
-    <script src="../public/js/bootstrap/bootstrap.js"></script>
-    <script src="../public/js/socket.io/socket.io.js"></script>
-    <script src="../public/js/socket.io.js"></script>
-    <script src="../public/js/js.js"></script>
+    <script src="../public/js/jquery/jquery.js" defer></script>
+    <script src="../public/js/popper.js/umd/popper.js" defer></script>
+    <script src="../public/js/bootstrap/bootstrap.js" defer></script>
+    <script src="../public/js/socket.io/socket.io.js" defer></script>
+    <script src="../public/js/socket.io.js" defer></script>
+    <script src="../public/js/js.js" defer></script>
     {{{block 'script'}}}
 </body>
 
