--- a/views/default.hbs
+++ b/views/default.hbs
@@ -10,6 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../public/css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../public/css/style.css">
+    <script src="../public/js/jquery/jquery.js"></script>
     {{{block "head"}}}
 </head>
 
@@ -51,11 +52,11 @@
     <div class="projects">
         <div class="yourProjects">
             {{#each allProjects}}
-            <div class="project" id="{{this.id}}" class="btn btn-secondary" data-toggle="tooltip" data-placement="right"
+            <button class="project" id="{{this.id}}" class="btn btn-secondary" data-toggle="tooltip" data-placement="right"
                 title="{{this.name}}">
                 <p>{{trimString this.name}}</p>
                 <span class="badge notes">{{this.notes}}</span>
-            </div>
+            </button>
 
             {{/each}}
         </div>
@@ -64,6 +65,7 @@
             <i class="fas fa-plus-circle fa-2x"></i>
         </button>
     </div>
+    <div class="triangle-down"></div>
     {{/if}}
     {{{body}}}
     {{!-- Add modal --}}
@@ -84,7 +86,6 @@
             </div>
         </div>
     </div>
-    <script src="../public/js/jquery/jquery.js" defer></script>
     <script src="../public/js/popper.js/umd/popper.js" defer></script>
     <script src="../public/js/bootstrap/bootstrap.js" defer></script>
     <script src="../public/js/socket.io/socket.io.js" defer></script>
