--- a/views/default.hbs
+++ b/views/default.hbs
@@ -50,10 +50,10 @@
     {{#if loggedIn}}
     <div class="triangle"></div>
     <div class="projects">
-        <div class="yourProjects">
+        <div class="yourProjects" id="yourProjects">
             {{#each allProjects}}
-            <button class="project" id="{{this.id}}" class="btn btn-secondary" data-toggle="tooltip" data-placement="right"
-                title="{{this.name}}">
+            <button class="project" id="{{this.id}}" class="btn btn-secondary" data-toggle="tooltip"
+                data-placement="right" title="{{this.name}}">
                 <p>{{trimString this.name}}</p>
                 <span class="badge notes">{{this.notes}}</span>
             </button>
