--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,5 +1,6 @@
 .desc {
     overflow: hidden;
+    height:40vh;
 }
 .hidden {
     height: 0px;
@@ -10,7 +11,6 @@
 #allComments{
     overflow-y:auto;
     height:20vh;
-
 }
 
 .commentContent{
@@ -44,9 +44,8 @@
 
 .taskItem {
     transition: 100ms ease-in-out;
-    height: 3em;
+    height: 3em !important;
     font-size: 14px;
-    margin:0.5em;
     border:1px solid #214040 !important;
     border-radius: 5px !important;
     box-shadow: 1px 2.5px 2px 2.5px #8d8d8d42;
