made some stuff, uploaded via bat

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -44,7 +44,7 @@
 
 .taskItem {
     transition: 100ms ease-in-out;
-    height: 3em !important;
+    height: 3em;
     font-size: 14px;
     border:1px solid #214040 !important;
     border-radius: 5px !important;
