--- a/views/default.hbs
+++ b/views/default.hbs
@@ -26,7 +26,7 @@
                 {{#if loggedIn}}
                 <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/user">{{{loggedIn}}}</a>
+                        <a class="nav-link active" href="/user"><span style="float:left"class="badge notes">{{userNotes}}<i class="userNotes fas fa-bell"></i></span>{{{loggedIn}}}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/logout">Log out</a>
