--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -6,7 +6,7 @@
 }
 
 .hidden {
-    height: 0px;
+    display:none;
 }
 
 .currentTask {
@@ -69,7 +69,6 @@
     height: 5em;
     min-height:5em;
 }
-
 
 /* width */
 
