--- a/views/default.hbs
+++ b/views/default.hbs
@@ -22,11 +22,35 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
+                    {{#if loggedIn}}
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="userNotes fas fa-bell"></i>{{totalNotes}}
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            {{#each allInvites}}
+                            <a class="dropdown-item" href="/user">Project Invite to
+                                '{{this.projectName}}' From <b>@{{this.fromUser}}</b></a>
+                            {{/each}}
+                            {{#each allFriendRequests}}
+                            <a class="dropdown-item" href="/user">Friend Request From
+                                <b>@{{this.fromUser}}</b></a>
+                            {{/each}}
+                            {{#each projectAndTaskNotes}}
+                            <a class="dropdown-item" href="/dashboard/{{this.projectID}}"><b>@{{this.fromUser}}</b> Tagged you in a project!</a>
+                            {{/each}}
+                            {{/if}}
+                        </div>
+                    </div>
                 </ul>
                 {{#if loggedIn}}
+
                 <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/user"><span style="float:left"class="badge notes">{{userNotes}}<i class="userNotes fas fa-bell"></i></span>{{{loggedIn}}}</a>
+                        <a class="nav-link active" href="/user"><span style="float:left"
+                                class="badge notes">{{userNotes}}<i
+                                    class="userNotes fas fa-bell"></i></span>{{{loggedIn}}}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/logout">Log out</a>
