--- a/views/default.hbs
+++ b/views/default.hbs
@@ -30,22 +30,24 @@
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                             {{#each allInvites}}
-                            <a class="dropdown-item" href="/user">Project Invite to
-                                '{{this.projectName}}' From <b>@{{this.fromUser}}</b></a>
+                            <a class="dropdown-item" href="/user">Project invite to
+                                '{{this.projectName}}' from <b>@{{this.fromUser}}</b></a>
                             {{/each}}
                             {{#each allFriendRequests}}
                             <a class="dropdown-item" href="/user">Friend Request From
                                 <b>@{{this.fromUser}}</b></a>
                             {{/each}}
                             {{#each projectAndTaskNotes}}
-                            <a class="dropdown-item" href="/dashboard/{{this.projectID}}"><b>@{{this.fromUser}}</b> Tagged you in a project!</a>
+                            <a class="dropdown-item" href="/dashboard/{{this.projectID}}"><b>@{{this.fromUser}}</b>
+                                tagged you in a project!</a>
                             {{/each}}
-                            {{/if}}
+
                         </div>
+
                     </div>
+                    {{/if}}
                 </ul>
                 {{#if loggedIn}}
-
                 <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
                         <a class="nav-link active" href="/user"><span style="float:left"
@@ -55,7 +57,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/logout">Log out</a>
                     </li>
-                </UL>
+                </ul>
                 {{else}}
                 <ul class="navbar-nav mt-2 mt-lg-0" id="userControl">
                     <li class="nav-item">
@@ -107,6 +109,11 @@
     <script src="../public/js/socket.io/socket.io.js" defer></script>
     <script src="../public/js/socket.io.js" defer></script>
     <script src="../public/js/js.js" defer></script>
+    <script>
+        if({{totalNotes}} != 0){
+            document.querySelector("#dropdownMenu2 i").style.color = "red";
+        }
+    </script>
     {{{block 'script'}}}
 </body>
 
