--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,9 +2,11 @@
     box-sizing: border-box;
     color: #214040;
 }
-body{
-    overflow-x:hidden;
+
+body {
+    overflow-x: hidden;
 }
+
 /* width */
 
 ::-webkit-scrollbar {
@@ -106,20 +108,21 @@ ul {
     border-radius: 100%;
     height: 3em;
     width: 3em;
-    margin:0.5em;
+    margin: 0.5em;
     transition: all 200ms ease-in-out;
-    overflow-y:hidden;
+    overflow-y: hidden;
 }
-.project p{
+
+.project p {
     font-weight: bold;
-    color: #63BFBF; 
+    color: #63BFBF;
     text-align: center;
     position: relative;
-    display:block;
-    left:50%;
+    display: block;
+    left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    margin:0;
+    margin: 0;
 }
 
 #addProject {
@@ -163,9 +166,10 @@ ul {
     background: #214040;
     z-index: -1111;
 }
-.triangle-down{
+
+.triangle-down {
     position: fixed;
-    bottom:1.7em;
+    bottom: 1.7em;
     width: 7em;
     height: 2em;
     transform: rotateZ(45deg);
@@ -176,24 +180,43 @@ ul {
 .addNew {
     padding: 2em;
 }
-.notes{
+
+.notes {
     background: #214040;
-    color:#85FFFE;
-    float:right;
-    padding-bottom:10px;
-    font-weight:500;
+    color: #85FFFE;
+    float: right;
+    padding-bottom: 10px;
+    font-weight: 500;
 }
-.taskNotes{
+
+.taskNotes {
     background: #214040;
-    color:#85FFFE;
-    float:right;
-    font-weight:500;
+    color: #85FFFE;
+    float: right;
+    font-weight: 500;
 }
-.userNotes{
-    color:grey;
+
+.userNotes {
+    color: grey;
     display: inline;
 }
 
-dropdown-item{
+dropdown-item {
     cursor: pointer !important;
+}
+
+.bar {
+    background: #214040;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: -10;
+    padding-left: 6em;
+}
+
+.barItem {
+    color: #63BFBF;
+    min-width: 4em;
+    margin: 0px 0.7em 0px 0.7em
 }
