--- a/views/default.hbs
+++ b/views/default.hbs
@@ -86,6 +86,8 @@
     <div class="triangle-down"></div>
     {{/if}}
     {{{body}}}
+
+    {{#if loggedIn}}
     {{!-- Add modal --}}
     <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog modal-sm">
@@ -104,18 +106,16 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="bar"><span class="barItem" id="online">Online: 3</span></div>
+    </footer>
+    {{/if}}
     <script src="../public/js/popper.js/umd/popper.js" defer></script>
     <script src="../public/js/bootstrap/bootstrap.js" defer></script>
     <script src="../public/js/socket.io/socket.io.js" defer></script>
     <script src="../public/js/socket.io.js" defer></script>
     <script src="../public/js/js.js" defer></script>
-    <script>
-            if({{totalNotes}} != 0){
-                document.querySelector("#dropdownMenu2 i").style.color = "red";
-            } else{
-                 document.querySelector(".dropdown-menu").innerHTML = "<span style=padding:5px;>No notifications!</span>"
-            }
-    </script>
     {{{block 'script'}}}
 </body>
 
