--- a/views/user.hbs
+++ b/views/user.hbs
@@ -4,6 +4,13 @@
 {{/contentFor}}
 {{#contentFor 'script'}}
 <script src="./public/js/user.js" defer></script>
+<script>
+    if ({{ totalNotes }} != 0) {
+        document.querySelector("#dropdownMenu2 i").style.color = "red";
+    } else {
+        document.querySelector(".dropdown-menu").innerHTML = "<span style=padding:5px;>No notifications!</span>"
+    }
+</script>
 {{/contentFor}}
 
 <main class="container">
