--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 {{#contentFor 'script'}}
-<script src="../public/js/signupLogin.js"></script>
+<script src="../public/js/signupLogin.js" defer></script>
 {{/contentFor}}
 <main>
     <div class="alert alert-danger hide" role="alert" id="alert">
