--- a/views/signup.html
+++ b/views/signup.html
@@ -82,7 +82,7 @@
                     aria-label="Confirm Password" aria-describedby="basic-addon1" required>
 
             </div>
-            <button type="button" id="submit" class="btn btn-outline-primary">Sign Up</button>
+            <button type="button" id="ssubmit" class="btn btn-outline-primary">Sign Up</button>
         </div>
     </main>
     <footer>
