made some stuff, uploaded via bat

--- a/views/default.hbs
+++ b/views/default.hbs
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        {{!-- <nav class="navbar navbar-expand-lg navbar-light">
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
@@ -68,6 +68,42 @@
                     </li>
                 </ul>
                 {{/if}}
+            </div>
+        </nav> --}}
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Flow</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    {{#if loggedIn}}
+
+                    <li class="nav-item">
+                        <a class="nav-link active user" id="{{{loggedIn}}}" href="/user"><span style="float:left"
+                                class="badge notes">{{userNotes}}<i
+                                    class="userNotes fas fa-bell"></i></span>{{{loggedIn}}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/logout">Log out</a>
+                    </li>
+
+                    {{else}}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup">Sign Up</a>
+                    </li>
+
+                    {{/if}}
+                </ul>
             </div>
         </nav>
 
