--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -71,6 +71,8 @@
                 <p id="infoState">state</p>
                 <p id="infoPostdate">Posted</p>
                 <p id="infoProjectId">Prject ID</p>
+                <i id="edit"class="fas fa-edit fa-2x"></i>
+                <i id="remove"class="fas fa-trash-alt fa-2x right remove"></i>
             </div>
             <div id="form" class="">
                 <div class="input-group mb-3">
