--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -19,7 +19,7 @@
             <p class="center">TODO</p>
             <p class="center">In Progress</p>
             <p class="center">To Verify</p>
-            <p class="center">Inprediments</p>
+            <p class="center">Impediments</p>
             <p class="center">DONE</p>
         </div>
         <div class="taskViewGrid" id="taskView">
