--- a/views/default.hbs
+++ b/views/default.hbs
@@ -72,7 +72,27 @@
         </nav> --}}
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Flow</a>
+            {{#if loggedIn}}
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <i class="userNotes fas fa-bell"></i>{{totalNotes}}
+            </button>
+            {{/if}}
+            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                {{#each allInvites}}
+                <a class="dropdown-item" href="/user">Project invite to
+                    '{{this.projectName}}' from <b>@{{this.fromUser}}</b></a>
+                {{/each}}
+                {{#each allFriendRequests}}
+                <a class="dropdown-item" href="/user">Friend Request From
+                    <b>@{{this.fromUser}}</b></a>
+                {{/each}}
+                {{#each projectAndTaskNotes}}
+                <a class="dropdown-item" href="/dashboard/{{this.projectID}}"><b>@{{this.fromUser}}</b>
+                    tagged you in a project!</a>
+                {{/each}}
+
+            </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -82,27 +102,29 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    {{#if loggedIn}}
+                    <div class="userControl">
+                        {{#if loggedIn}}
 
-                    <li class="nav-item">
-                        <a class="nav-link active user" id="{{{loggedIn}}}" href="/user"><span style="float:left"
-                                class="badge notes">{{userNotes}}<i
-                                    class="userNotes fas fa-bell"></i></span>{{{loggedIn}}}</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/logout">Log out</a>
-                    </li>
+                        <li class="nav-item" style="float: right">
+                            <a class="nav-link active user" id="{{{loggedIn}}}" href="/user"><span style="float:left"
+                                    class="badge notes">{{userNotes}}<i
+                                        class="userNotes fas fa-bell"></i></span>{{{loggedIn}}}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="float: right" href="/logout">Log out</a>
+                        </li>
 
-                    {{else}}
+                        {{else}}
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/signup">Sign Up</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="float: right" href="/login">Log In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="float: right" href="/signup">Sign Up</a>
+                        </li>
 
-                    {{/if}}
+                        {{/if}}
+                    </div>
                 </ul>
             </div>
         </nav>
