made some stuff, uploaded via bat

--- a/views/user.hbs
+++ b/views/user.hbs
@@ -54,7 +54,7 @@
         <div id="chat" class="border">
             <div id="allMessages">
             </div>
-            <div class="input-group mb-3">
+            <div class="input-group mb-3 inputAndBtnChatHide">
                 <div class="input-group-prepend">
                     <span class="input-group-text"><i class="far fa-comment"></i></span>
                 </div>
