--- a/views/default.hbs
+++ b/views/default.hbs
@@ -75,23 +75,10 @@
             {{#if loggedIn}}
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                <i class="userNotes fas fa-bell"></i>{{totalNotes}}
+                <i class="userNotes fas fa-bell"></i><span>0</span>
             </button>
             {{/if}}
-            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                {{#each allInvites}}
-                <a class="dropdown-item" href="/user">Project invite to
-                    '{{this.projectName}}' from <b>@{{this.fromUser}}</b></a>
-                {{/each}}
-                {{#each allFriendRequests}}
-                <a class="dropdown-item" href="/user">Friend Request From
-                    <b>@{{this.fromUser}}</b></a>
-                {{/each}}
-                {{#each projectAndTaskNotes}}
-                <a class="dropdown-item" href="/dashboard/{{this.projectID}}"><b>@{{this.fromUser}}</b>
-                    tagged you in a project!</a>
-                {{/each}}
-
+            <div id="userNotesDropdown" class="dropdown-menu" aria-labelledby="dropdownMenu2">
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,9 +93,8 @@
                         {{#if loggedIn}}
 
                         <li class="nav-item" style="float: right">
-                            <a class="nav-link active user" id="{{{loggedIn}}}" href="/user"><span style="float:left"
-                                    class="badge notes">{{userNotes}}<i
-                                        class="userNotes fas fa-bell"></i></span>{{{loggedIn}}}</a>
+                            <a class="nav-link active user" id="{{{loggedIn}}}" href="/user"><span id="userIconNotes" style="float:left"
+                                    class="badge notes">{{userNotes}}</span>{{{loggedIn}}}</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" style="float: right" href="/logout">Log out</a>
