--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,6 +55,9 @@ li.active>a {
 
 .navbar {
     background: #214040 !important;
+    position: fixed !important;
+    width: 100%;
+    z-index: 3;
 }
 
 .navbar-nav {
@@ -104,12 +107,14 @@ ul {
 
 .projects {
     padding-top: 2em;
+    top: 3em;
     direction: rtl;
     overflow: auto;
     position: fixed;
     width: 4em;
     height: 100vh;
     background: #214040;
+    z-index: 4;
 }
 
 .project {
@@ -176,6 +181,8 @@ ul {
     transform: rotateZ(-45deg);
     background: #214040;
     z-index: -1111;
+    top: 3em;
+    z-index: 2;
 }
 
 .triangle-down {
@@ -186,6 +193,7 @@ ul {
     transform: rotateZ(45deg);
     background: #214040;
     z-index: -1111;
+    z-index: 2;
 }
 
 .addNew {
@@ -218,12 +226,13 @@ dropdown-item {
 
 .bar {
     background: #214040;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     left: 0px;
     width: 100%;
     z-index: -10;
     padding-left: 6em;
+    z-index: 3;
 }
 
 .barItem {
