--- a/views/default.hbs
+++ b/views/default.hbs
@@ -66,7 +66,8 @@
     {{#if loggedIn}}
     <div class="triangle"></div>
     <div class="projects">
-        <div class="yourProjects" id="yourProjects">
+        <div class="yourProjects">
+            <div id="yourProjects"></div>
             <button class="" id="addProject" type="button" class="btn btn-secondary" data-toggle="modal"
                 data-target="#myModal">
                 <i class="fas fa-plus-circle fa-2x"></i>
